--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,9 @@
         Options -MultiViews
     </IfModule>
     
-    Options -Indexes
+    Options Includes FollowSymLinks MultiViews
     RewriteEngine On
+    
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
